feat(app): first linting and more scripts commands

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "yarn lint & next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint & standard --fix"
   },
   "dependencies": {
     "eslint": "8.37.0",
