--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "yarn lint & next build",
     "start": "next start",
-    "lint": "next lint & standard --fix"
+    "lint": "next lint & standard --fix",
+    "initdb": "ts-node sync.ts"
   },
   "dependencies": {
     "eslint": "8.37.0",
@@ -16,7 +17,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "standard": "^17.0.0"
+    "@types/react": "18.0.31",
+    "dotenv": "^16.0.3",
+    "mysql2": "^3.2.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.30.0",
+    "sequelize-typescript": "^2.1.5",
+    "standard": "^17.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
