--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "yarn lint & next build",
     "start": "next start",
     "lint": "next lint & ts-standard --fix",
-    "initdb": "ts-node sync.ts"
+    "initdb": "ts-node insert-data.ts",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/react": "18.0.31",
     "dotenv": "^16.0.3",
+    "husky": "^8.0.3",
     "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.30.0",
