--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "module": "Node16",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "strictNullChecks": true,
+
     "jsx": "preserve",
     "paths": {
       "@/*": ["./src/*"]
