--- a/package.json
+++ b/package.json
@@ -13,27 +13,35 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.15",
     "axios": "^1.3.4",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "formidable": "^2.1.1",
+    "mysql2": "^3.2.0",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "reflect-metadata": "^0.1.13",
+    "sharp": "^0.32.0"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
+    "@types/node": "^18.15.11",
     "@types/react": "18.0.31",
+    "@types/validator": "^13.7.14",
     "dotenv": "^16.0.3",
     "husky": "^8.0.3",
-    "mysql2": "^3.2.0",
-    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.30.0",
     "sequelize-typescript": "^2.1.5",
     "ts-node": "^10.9.1",
     "ts-standard": "^12.0.2",
     "typescript": "^5.0.2"
   },
-  "eslintConfig": {
-    "extends": "./node_modules/ts-standard/eslintrc.json"
+  "ts-standard": {
+    "ignore": [
+      "next-env.d.ts"
+    ]
   }
 }
